# Neural-Network

./: .gitignore  CMakeLists.txt  README  main.cpp
include/: HiddenLayer.h  InputLayer.h  Layer.h  NeuralNet.h  Neuron.h  OutputLayer.h  RandomUtils.h
src/: HiddenLayer.cpp  InputLayer.cpp  Layer.cpp  NeuralNet.cpp  Neuron.cpp  OutputLayer.cpp  RandomUtils.cpp
